# texas-jargon-generator

./: .gitignore  .swiftformat  .swiftlint.yml  README.md
TexasJargonGenerator/: AppDelegate.swift  ContentView.swift  SceneDelegate.swift
TexasJargonGenerator.xcodeproj/: project.pbxproj
TexasJargonGenerator.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TexasJargonGenerator/TexasJargonGenerator.xcdatamodeld/: .xccurrentversion
TexasJargonGeneratorTests/: TexasJargonGeneratorTests.swift
TexasJargonGeneratorUITests/: TexasJargonGeneratorUITests.swift
common/random-jargon-generator/: .gitignore  CMakeLists.txt  conanfile.txt
common/random-jargon-generator/scripts/: install-dependencies.sh  run-formatters.sh  run-linters.sh  run-tests.sh  ship-it.sh
common/random-jargon-generator/src/: random_jargon_generator.cpp  random_jargon_generator.h  random_jargon_generator_library.cpp  random_jargon_generator_library.h
common/random-jargon-generator/test/: random_jargon_generator_library_test.cpp  random_jargon_generator_test.cpp
contracts/: .gitignore
contracts/mappings/: jargon.json
frontend/ios/: .swiftlint.yml  Gemfile  Mintfile
frontend/ios/TexasJargonGenerator/: AppDelegate.swift  HTTPError.swift  Jargon.swift  JargonRepository.swift  (+1 more)
frontend/ios/TexasJargonGenerator.xcodeproj/: project.pbxproj
frontends/android/: settings.gradle
frontends/ios/: Mintfile
frontends/web/: index.html
scripts/: install-dependencies.sh  run-formatters.sh  run-linters-and-tests.sh  run-linters.sh  ship-it.sh  start-wiremock-with-local-contracts.sh
(+74 files in other folders)
